# fargv

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  coverage.json  llms.txt  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.claude/: CLAUDE.md  CLAUDE_INITIAL.md  DESIGN.md  VIRTUAL_USERS.md  resume.sh  settings.local.json
.github/workflows/: tests.yml
.trunk/: trunk.yaml
badges/: coverage.json
docs/: api.md  api_legacy.md  cli.md  conf.py  config_envvars.md  defining_parsers.md  features.md  gui_backends.md  index.md  parameter_types.md  quickstart.md  requirements.txt  return_types.md  subcommands.md
examples/: README.md  fargv_demo.py  fargv_demo_noequal.py  git_like.py  sklearn_demo.py
examples/jupyter/: fargv_jupyter_demo.ipynb
examples/scenario/: scenario.sh  word_count.py  word_count_fargv.py
fargv/: __init__.py  __main__.py  ansi.py  argv_parser.py  config.py  demo.py  dict_parser.py  fargv_arg_parser.py  fargv_argparser.py  fargv_legacy.py  fargv_param_definition.py  fargv_param_registry.py  fargv_param_value.py  fargv_tkinter.py  global_guessing.py  gui_ipywidgets.py  gui_qt.py  gui_tk.py  ipywidgets.py  namespace.py  oo_fargv.py  parse.py  parser.py  script_help.py  type_detection.py  util.py  version.py
fargv/parameters/: __init__.py  auto_params.py  base.py  collection.py  path.py  scalars.py  stream.py  string.py  subcommand.py  tuple_param.py
test/: test_FargvName.py  test_FargvParam.py  test_FargvRegistry.py  test_fargv_legacy.py
test/heavy/: test_packaging.py
test/unittest/: test_legacy.py  (+8 more)
(+3 files in other folders)
