[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.coverage.run]
source = ["fargv"]
omit = [
    "*/gui_tk.py",
    "*/gui_qt.py",
    "*/gui_ipywidgets.py",
    "*/ipywidgets.py",
]
[tool.coverage.report]
exclude_lines = [
    "def main_",
    "pragma: no cover",
]
omit = [
    "*/gui_tk.py",
    "*/gui_qt.py",
    "*/gui_ipywidgets.py",
    "*/ipywidgets.py",
]
