# https://github.com/anguelos/fargv




[metadata]
name = fargv
version = 0.1.0
author = Anguelos Nicolaou
author-email = anguelos.nicolaou@gmail.com
home-page = https://github.com/anguelos/fargv
description = A very easy to use argument parser.
long-description = file: README.md
license = MIT
license-file = LICENSE.txt
platform = any
keywords = {argv, CLI, argument}
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 2.7
  Topic :: Scientific/Engineering

[options]
python_requires = >= 2.7
packages = find:
zip_safe: False
scripts =

[build-system]
requires = ["setuptools"]


[flake8]
max-line-length = 120
